# slimulation

./: .gitignore  README_zh.md  eval.py  pyproject.toml  test.py  unit_test.py  view.py
docs/: how_to_support_new_dataset.md
examples/: infer.sh  llm_based_eval.sh  rule_based_eval.sh  view.sh
mika_eval/backend/: offline.py
mika_eval/reward/: reward.py
mika_eval/tasks/: __init__.py
recipe/: run.sh
recipe/arena_hard/: aggregate_results.py  api_judge.py  inference.py  postprocess.py  preprocess.py  prompt.py  run_ours.sh  run_qwen3.sh  show_result.py  test.sh
recipe/arena_hard/arena_data/: k8s_run.sh  (+3 more)
recipe/evaluation/: eval.py  evaluate.py  inference.py  prepare_data.py  prepare_data_think.py  run.sh  run_if_eval.sh  run_ours.sh
recipe/on_policy_distillation/: prepare_40b_rollout.py  prepare_to_slime_format.py  prepare_to_slime_format_language.py  preprocess.py  run.sh
recipe/rm/: rm.py
scripts/debug/: 1node_verl_eval_debug.yaml  debug.sh
scripts/slime_qwen_30b/: infer.sh
slimulation/: __init__.py
slimulation/backend/: __init__.py  base.py  online.py
slimulation/llm_judge/: __init__.py  extract.py  llm_judge.py  rating.py
slimulation/reward/: __init__.py  reward.py  score.py
slimulation/server/: __init__.py  logger.py  schema.py
slimulation/tasks/: __init__.py  base.py
slimulation/utils/: __init__.py  data.py  dedup_strict.py  template.py  utils.py
src/: data.py  grader.py  task_manager.py  utils.py  vllm.py
src/backend/: offline.py  online.py
src/data/: data.py  extract.py  template.py
src/llm_judge/: llm_judge.py
src/reward/: grader.py  if_functions.py  reward.py  score.py
src/tasks/: __init__.py  minerva.py
(+69 files in other folders)
