[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slimulation"
version = "0.1.0"
description = "MikaEval: A flexible evaluation framework for LLMs"
readme = "README_zh.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Qingyu"}
]
keywords = ["llm", "evaluation", "inference", "sglang"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sglang>=0.4.0",
    "transformers>=4.40.0",
    "tqdm>=4.66.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/qingyu/mika-eval"
Repository = "https://github.com/qingyu/mika-eval"

[project.scripts]
mika-eval = "slimulation.cli:main"

[tool.setuptools]
packages = ["slimulation", "slimulation.backend", "slimulation.reward", "slimulation.reward.math", "slimulation.reward.if_eval", "slimulation.reward.if_bench", "slimulation.tasks", "slimulation.server", "slimulation.llm_judge", "slimulation.utils"]

[tool.setuptools.package-data]
slimulation = ["py.typed"]
